RESOLVED FIXED56240
Invalid assertion in StorageTracker -- PageGroup::numberOfPageGroups() == 1
https://bugs.webkit.org/show_bug.cgi?id=56240
Summary Invalid assertion in StorageTracker -- PageGroup::numberOfPageGroups() == 1
Anton D'Auria
Reported 2011-03-11 21:04:28 PST
LocalStorage is currently in limbo. It is accessed through separate PageGroup instances with their own StorageNamespace instances, but each PageGroup uses the same path for LocalStorage dbs. Thus, the in-memory versions of those dbs can be out of sync with the db if another PageGroup is writing to it. This has been brought up in https://bugs.webkit.org/show_bug.cgi?id=51878 LocalStorage should either be truly per-PageGroup, or global. Right now it is neither, so until this is fixed, the assertion in StorageTracker -- (PageGroup::numberOfPageGroups() == 1) -- is invalid.
Attachments
Patch (2.27 KB, patch)
2011-03-11 23:11 PST, Anton D'Auria
beidson: review+
Anton D'Auria
Comment 1 2011-03-11 21:05:56 PST
I should have stated explicitly that "the in-memory versions of those dbs" are StorageAreas with their HashMap representations of the backing dbs.
Anton D'Auria
Comment 2 2011-03-11 23:11:00 PST
Brady Eidson
Comment 3 2011-03-13 23:21:15 PDT
Landed in r81002
Brady Eidson
Comment 4 2011-03-13 23:21:59 PDT
We should still track actually clearing up the "am I per-pagegroup or not?" concept here.
Note You need to log in before you can comment on or make changes to this bug.