Reviewed and landed by Brady Eidson.

Patch by Anton D'Auria <adauria@apple.com> on 2011-03-13
Invalid assertion in StorageTracker - PageGroup::numberOfPageGroups() == 1
https://bugs.webkit.org/show_bug.cgi?id=56240

This assertion is invalid until LocalStorage is either global or is isolated by PageGroup.

* storage/StorageTracker.cpp:
(WebCore::StorageTracker::origins):
(WebCore::StorageTracker::deleteAllOrigins):
(WebCore::StorageTracker::deleteOrigin):



Canonical link: https://commits.webkit.org/70886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81002 268f45cc-cd09-0410-ab3c-d52691b4dbfc